# hotplate

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/agents/: ChangeLog.agent.md  Release.agent.md
.github/workflows/: bump-version.yml  release.yml  static.yml
.github/workspace/: release.yml
.tools/: project_analyzer.py  project_structure.md
apps/: index.html
docs/: GIT-BRANCHING-GUIDE.md  ROADMAP.md  VSCODE-EXTENSION.md  WHY-RUST.md  new_roadmap.md
docs/discussions/hotplate-next-direction/: 00_brief_2025-07-15.md  final_consensus_2025-07-15.md  review_gemini_round1_2025-07-15.md  review_gemini_round2_2025-07-15.md  review_gpt_round1_2025-07-15.md  review_gpt_round2_2025-07-15.md  synthesis_round1_2025-07-15.md  synthesis_round2_2025-07-15.md
scripts/: bump.ps1  copy-to-extension.ps1
src/: config.rs  events.rs  inject.rs  livereload.js  main.rs  mcp.rs  server.rs  watcher.rs  welcome.html
vscode-extension/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  extension.js  package-lock.json  package.json
vscode-extension/apps/: index.html
